# Hyrule-Builder

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  setup.py
.github/workflows/: ci.yml  pythonpublish.yml  release.yml
hyrule_builder/: __init__.py  __main__.py  __version__.py  builder.py  guess.py  rstb_main.py  sarc_main.py  unbuilder.py
hyrule_builder/data/: rstb_entries.json
hyrule_builder/data/switch/: rstb.json
hyrule_builder/data/wiiu/: rstb.json
src/: add.rs  lib.rs  main.rs  pre.rs  sarc_ext.rs  settings.rs  unbuilder.rs  unzip_some.rs  util.rs  yaz.rs
src/builder/: actor.rs  event.rs  mod.rs
