[package]
name = "hyrule-builder"
version = "0.10.0"
edition = "2021"
readme = "README.md"

[dependencies]
anyhow = "1.0.44"
botw-utils = "0.5.0"
colored = "2.0.0"
crc = "3.2.1"
dirs2 = "3.0.1"
dunce = "1.0.5"
fs-err = "2.8.1"
join_str = "0.1.0"
glob = "0.3.0"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "f5d0c6e33cc8d12d66f1dd0d329ecf00bcbb9c51" }
once_cell = "1.12.0"
path-slash = "0.2.1"
parking_lot = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.5.1"
roead = { version = "0.25.3", features = ["yaml"] }
rustc-hash = "2.0.0"
rstb = { version = "0.8.1", features = ["botw-data", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
serde_yml = "0.0.10"
smartstring = "1.0.1"
structopt = "0.3.23"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
